<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="valor"
            type="com.example.calculoborracha.view.ValorFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.ValorFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/calcPrecoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:gravity="center_horizontal"
                android:text="@string/calculo_de_pre_o"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calcDiametro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calcPrecoTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputVlDiametroFerro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Diâmetro do Ferro:"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calcDiametroBorracha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calcDiametro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputVlDiametroBorracha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Diâmetro da Borracha:"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calcCompBorracha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calcDiametroBorracha">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputVlComprimentoBorracha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comprimento_da_borracha"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tipoBorrachaTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/selecione_o_tipo_de_borracha"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calcCompBorracha" />

            <RadioGroup
                android:id="@+id/radioGroup3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tipoBorrachaTitle">

                <RadioButton
                    android:id="@+id/radioButtonVlNitrilica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nitr_lica" />

                <RadioButton
                    android:id="@+id/radioButtonVlPrecoEPDM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/epdm_silicone_neoprene" />

                <RadioButton
                    android:id="@+id/radioButtonVlPrecoX300"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/x_300" />
            </RadioGroup>

            <TextView
                android:id="@+id/extraServicosTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/servi_os_extras"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/extraServicosTitle">

                <RadioButton
                    android:id="@+id/radioButtonCanais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/canais" />

                <RadioButton
                    android:id="@+id/radioButtonRetifica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/retifica" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/precoQuiloText"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPrecoQuilo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pre_o_do_quilo"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewLabelResultado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="8dp"
                android:text="@string/valor_do_revestimento"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/precoQuiloText" />

            <TextView
                android:id="@+id/textViewVlResultadoPreco"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/_0_00"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewLabelResultado"
                app:layout_constraintTop_toBottomOf="@+id/precoQuiloText" />

            <Button
                android:id="@+id/buttonVlCalularPreco"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/calcular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewVlResultadoPreco" />

            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="8dp"
                android:text="@string/limpar_campos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonVlCalularPreco" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>